--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
-    "name": "minimalfw/filesystem-cache",
+    "name": "marco476/filesystem-cache",
     "type": "library",
-    "description": "PHP Filesystem cache with PSR-6 rules",
+    "description": "PHP Filesystem cache builded with PSR-6 rules",
     "keywords": [
         "cache",
-        "minimal framework",
         "filesystem cache",
         "cache psr6"
     ],
@@ -17,11 +16,14 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.3"
+        "php": ">=5.6"
     },
     "autoload": {
         "psr-4": {
             "": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0"
     }
 }
